--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -50,7 +50,7 @@ When [creating custom sections](https://developers.vtex.com/docs/guides/faststor
 | ------------- | ------------- |
 |`custom`|Landing Page|
 |`global`|Global Sections|
-|`landing`|Landing Page and |
+|`landing`|Landing Page |
 |`pdp`|Product Details Page|
 |`plp`|Product Listing Page|
 |`search`|Search Page|
@@ -65,7 +65,7 @@ In the following example, the [`ProductShelf` section](https://developers.vtex.c
 
 ```json
 {
-  "name": "ProductSheld",
+  "name": "ProductShelf",
   "requiredScopes": ["pdp"],
   "schema": {...},
 }
