Apply suggestions from code review

--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -157,7 +157,7 @@ In the following example, let’s set a new Content Type `Custom Page` to displa
     }
     ```
 
-    We defined the "scopes": ["custom"] for the new `customPage` Content Type. The `custom` scope is also the [`landingPage` default scope defined in FastStore](#default-faststore-scopes).
+    We defined the `"scopes": ["custom"]` for the new `customPage` Content Type. The `custom` scope is also the [`landingPage` default scope defined in FastStore](#default-faststore-scopes).
 
 2. In the `sections.json` file, add the following:
 
