--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -4,6 +4,7 @@ slug: "managing-content-with-scopes-and-requiredscopes"
 hidden: false
 createdAt: "2024-07-29T14:00:15.623Z"
 updatedAt: ""
+excerpt: "Use 'scopes' and 'requiredScopes' to define which store sections can be added to specific pages, ensuring proper content structure for your store."
 ---
 
 `scopes` and `requiredScopes` are Headless CMS schema definitions that define which store sections can be added to specific pages, defined within [Content Types](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-2-adding-content-types-to-the-headless-cms).
