--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -208,8 +208,7 @@ For the `Call To Action` section, we defined that it will be available only for 
 
 > ℹ️ Remember that the `Call To Action` section is also available for the `landingPage` Content Type because the [`custom` scope is default for it in FastStore](#default-faststore-scopes).
 
-- When editing the `Custom Page` Content Type, the Headless CMS checks its scopes (`custom`) and matches them against the sections' `requiredScopes` (`custom`).
-- Since the Call to Action section matches the Custom Page and Landing Page scope, the section is available to use in these two Content Types.
+When editing the `Custom Page` Content Type, the Headless CMS checks its scopes (`custom`) and matches them against the sections' `requiredScopes` (`custom`). Since the Call to Action section matches the Custom Page and Landing Page scope, the section is available to use in these two Content Types.
 
 ### Syncing the Headless CMS changes
 
