Doc: Updating and renaming vtex-io-documentation-making-a-custom-component-editable-in-site-editor.mdx to vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Making a custom component editable in Site Editor"
-slug: "making-a-custom-component-editable-in-site-editor"
+title: "Making a custom component available in Site Editor"
+slug: "making-a-custom-component-available-in-site-editor"
 hidden: false
 createdAt: "2024-07-24T09:45:34.646Z"
 updatedAt: ""
@@ -28,7 +28,7 @@ In this guide, you will learn how to configure the schema definitions in your co
 
 For your block to accept user customizations, export the React component responsible for the block. This component should include a schema that allows editing directly in Site Editor.
 
-1. Create a new folder in the `/react` root directory. Follow the `react/components/{ComponentName}/index.tsx` pattern. For example, for a component named `CustomComponent`, the folder structure is as follows:
+1. Create a new folder in the `/react` root directory. Follow the `react/components/{ComponentName}/index.tsx` pattern. The folder structure for a component named `CustomComponent` is shown alongside.
    
 2. Open the `index.tsx` file and define your custom component.
 
