Doc: Updating vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
@@ -28,7 +28,7 @@ In this guide, you will learn how to configure the schema definitions in your co
 
 For your block to accept user customizations, export the React component responsible for the block. This component should include a schema that allows editing directly in Site Editor.
 
-1. Create a new folder in the `/react` root directory. Follow the `react/components/{ComponentName}/index.tsx` pattern. The folder structure for a component named `CustomComponent` is shown alongside.
+1. Create a new folder in the `/react` root directory. Follow the `react/components/{ComponentName}/index.tsx` pattern. See alongside a folder structure example for a component named `CustomComponent`.
    
 2. Open the `index.tsx` file and define your custom component.
 
