Doc: Updating vtex-io-documentation-site-editor-schema-examples.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
@@ -4,7 +4,7 @@ slug: "site-editor-schema-examples"
 hidden: false
 createdAt: "2024-07-31T18:01:27.599Z"
 updatedAt: ""
-excerpt: "Explore practical schema examples for configuring custom components in Site Editor"
+excerpt: "Explore practical schema examples for configuring custom components in Site Editor."
 seeAlso: 
   - “/docs/guides/vtex-io-documentation-making-a-custom-component-available-in-site-editor”
 ---
