code hike: first code block

--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -16,7 +16,7 @@ Widgets can help when you have [created a new store section](https://developers.
 2. Open the `sections.json` file.
 3. In the `sections.json` file, find the section where you want to add the widget. In the following example, the new section, `Custom Newsletter`, receives the [`media-gallery`](#media-gallery) widget.
 
-  <CH.Code rows="focus">
+  <CH.Code>
 
   ```json sections.json focus=34:39
     …
