--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -1,5 +1,5 @@
 ---
-title:"Widgets for Headless CMS"
+title: 'Widgets for Headless CMS'
 ---
 
 Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to manage store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping editors create and edit content.
@@ -14,7 +14,7 @@ Widgets can help when you have [created a new store section](https://developers.
 
 1. Open your store project code in a code editor and navigate to the `cms/faststore` folder.
 2. Open the `sections.json` file.
-3. In the `sections.json` file, find the section where you want to add the widget. In the following example, the new section, `Custom Newsletter`, receives the [`media-gallery`](#media-gallery) widget.
+3. In the `sections.json` file, find the section where you want to add the widget. In the following `sections.json` file example, the new section, `Custom Newsletter`, receives the [`media-gallery`](#media-gallery) widget.
 
   <CH.Code>
 
@@ -170,14 +170,14 @@ Widgets can help when you have [created a new store section](https://developers.
 
 4. Open the terminal and run `yarn cms-sync` to synchronize your changes with the Headless CMS. Once the changes are synchronized, you will see the following message: `info: CMS synced successfully...`.
 5. Go to the VTEX Admin and access **Storefront > Headless CMS**.
-6. Open the page where you want to add the new section. In this context, we will add the `Custom Newslet` to the `Home`.
-7. Add the section to the page, and you will notice the new widgets you have added, `media-gallery`.
+6. Open the page where you want to add the new section. In this context, we will add the `Custom Newsletter` to the `Home`.
+7. Add the section to the page, and you will notice the widget you have added, the [`media-gallery`](#media-gallery).
 
-![newsletter-hcms-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-one___6c8c5e28b43487efc6f6048afd8d8d15.gif)
+    ![newsletter-hcms-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-one___6c8c5e28b43487efc6f6048afd8d8d15.gif)
 
 8. Click `Preview` to see the new component with the new image.
-	
-![newsletter-store-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-two___9c76a69ce03639b33faa85eb2a7cb367.png)
+
+    ![newsletter-store-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-two___9c76a69ce03639b33faa85eb2a7cb367.png)
 
 ---
 
@@ -221,7 +221,6 @@ Displays a checkbox commonly used in forms to select an option. The following im
 ### `image-uploader`
 
 Displays a card to upload an image from your local machine. The following image shows how the `image-uploader` appears within the headless CMS interface:
-
 
 ![image-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-four___58dba186180d5e731436a06c41a8c454.png)
 
