fix introduction typo

--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -2,7 +2,7 @@
 title: 'Widgets for Headless CMS'
 ---
 
-Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to manage store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping editors create and edit content.
+Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to manage store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping to create and edit content.
 
 <CH.Scrollycoding>
 
