--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -2,9 +2,140 @@
 title: 'Widgets for Headless CMS'
 ---
 
-Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to manage store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping to create and edit content.
+Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to enhance store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping editors create and edit content.
+
+In this guide, you will see:
+
+- [Available widgets](#available-widgets): Default widgets to implement in store sections.
+- [Example on how to add a widget to a section](#adding-a-widget-to-a-store-section): An implementation example on how to add a widget to a new store section.
+
+## Available widgets
+
+Below is a brief description of the widgets that can be implemented and used in the Headless CMS interface in the VTEX Admin. For detailed information about each widget, click on the respective widget name and for an implementation example of adding a widget to a store section, see the [Adding a widget to a store section](#adding-a-widget-to-a-store-section).
+
+| Widget name    | Description     |
+| -------------------- | ------------------ |
+| [`checkboxes`](#checkboxes)               | Displays checkboxes for selecting options in forms.  |
+| [`image-uploader`](#image-uploader)       | Uploads images from your local machine.             |
+| [`date-time`](#date-time)                 | Provides a calendar popup for selecting a date and time. |
+| [`draftjs-rich-text`](#draftjs-rich-text) | Rich text editor for formatting and styling store text.        |
+| [`media-gallery`](#media-gallery)         | Uploads or selects existing images or videos from [Media](https://vtexhelp.myvtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2). |
 
 <CH.Scrollycoding>
+
+### `checkboxes`
+
+Displays a checkbox commonly used in forms to select an option. The following image shows how the `checkboxes` appears within the headless CMS interface:
+
+![checkboxes-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-three___77a45e8e239de651e1169b6b15ebe222.gif)
+
+<CH.Code>
+
+```json checkboxes
+"activate": {
+    "title": "Activate Cupom",
+     "type": "boolean",
+     "default": true,
+     "widget": {
+         "ui:widget": "checkboxes"
+     }
+},
+```
+
+</CH.Code>
+
+---
+
+### `image-uploader`
+
+Displays a card to upload an image from your local machine. The following image shows how the `image-uploader` appears within the headless CMS interface:
+
+![image-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-four___58dba186180d5e731436a06c41a8c454.png)
+
+> ⚠️ The `image-uploader` is one of the widgets available. Still, we recommend using the [`media gallery`](#media-gallery) widget, which allows selecting and uploading not only images but also videos from the [Media](https://help.vtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module.
+
+<CH.Code>
+
+```json image-uploader
+"imageSrc": {
+   "type": "string",
+    "title": "Image",
+    "widget": {
+        "ui:widget": "image-uploader"
+     }
+ }
+```
+
+</CH.Code>
+
+---
+
+### `date-time`
+
+Provides a calendar popup for selecting a single date and time. It is ideal for displaying deadlines, event times, or any scenario where you need to specify a specific date and time within your headless CMS content. For example, showcase a product's expiration date or display a time-limited coupon badge. The following image shows how the `date-time` appears within the headless CMS interface:
+
+![date-time-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-five___ddd15e6fbc00b8687276bd6bf6d72e78.gif)
+
+<CH.Code>
+
+```json date-time
+"dateAndTime": {
+    "title": "Calendar",
+    "type": "string",
+    "widget": {
+       "ui:widget": "date-time"
+     }
+ },
+```
+
+</CH.Code>
+
+---
+
+### `draftjs-rich-text`
+
+Displays an editor that allows formatting and styling of store text. The following image shows how the `draftjs-rich-text` appears within the headless CMS interface:
+
+![draftjs-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-six___b1c1f6a8a646661428c75d7e68dcdbd2.png)
+
+<CH.Code>
+
+```json draftjs-rich-text
+"richText": {
+    "title": "Text editor",
+    "type": "string",
+    "widget": {
+       "ui:widget": "draftjs-rich-text"
+     }
+ },
+```
+
+</CH.Code>
+
+---
+
+### `media-gallery`
+
+Property a card to upload or select an existing image from the [Media](https://help.vtex.com/en/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module. The following image shows how the `media-gallery` appears within the headless CMS interface:
+
+> ⚠️ The difference between the [`image-uploader`](#image-uploader) and the `media-gallery` is that when you click the `media-gallery` property, you can select or upload an image or a video from the [Media](https://help.vtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module. The `image-uploader` allows you to upload only images from your machine.
+
+![media-gallery-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-seven___ab9decd87c30ee0c44428ff83dcae592.png)
+
+<CH.Code>
+
+```json media-gallery
+"mediaGallery": {
+    "title": "Media Gallery",
+    "type": "string",
+    "widget": {
+       "ui:widget": "media-gallery"
+     }
+ },
+```
+</CH.Code>
+
+---
 
 ## Adding a widget to a store section
 
@@ -168,6 +299,10 @@ Widgets can help when you have [created a new store section](https://developers.
 
   </CH.Code>
 
+  </CH.Scrollycoding>
+
+### Synchronize the changes with Headless CMS
+
 4. Open the terminal and run `yarn cms-sync` to synchronize your changes with the Headless CMS. Once the changes are synchronized, you will see the following message: `info: CMS synced successfully...`.
 5. Go to the VTEX Admin and access **Storefront > Headless CMS**.
 6. Open the page where you want to add the new section. In this context, we will add the `Custom Newsletter` to the `Home`.
@@ -178,134 +313,3 @@ Widgets can help when you have [created a new store section](https://developers.
 8. Click `Preview` to see the new component with the new image.
 
     ![newsletter-store-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-two___9c76a69ce03639b33faa85eb2a7cb367.png)
-
----
-
-## Widgets available
-
-Below is a brief description of the widgets that can be implemented and used in the Headless CMS interface in the VTEX Admin. For detailed information about each widget, click on the respective widget name.
-
-| Widget name    | Description     |
-| -------------------- | ------------------ |
-| [`checkboxes`](#checkboxes)               | Displays checkboxes for selecting options in forms.  |
-| [`image-uploader`](#image-uploader)       | Uploads images from your local machine.             |
-| [`date-time`](#date-time)                 | Provides a calendar popup for selecting a date and time. |
-| [`draftjs-rich-text`](#draftjs-rich-text) | Rich text editor for formatting and styling store text.        |
-| [`media-gallery`](#media-gallery)         | Uploads or selects existing images or videos from [Media](https://vtexhelp.myvtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2). |
-
----
-
-### `checkboxes`
-
-Displays a checkbox commonly used in forms to select an option. The following image shows how the `checkboxes` appears within the headless CMS interface:
-
-![checkboxes-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-three___77a45e8e239de651e1169b6b15ebe222.gif)
-
-<CH.Code>
-
-```json checkboxes
-"activate": {
-    "title": "Activate Cupom",
-     "type": "boolean",
-     "default": true,
-     "widget": {
-         "ui:widget": "checkboxes"
-     }
-},
-```
-
-</CH.Code>
-
----
-
-### `image-uploader`
-
-Displays a card to upload an image from your local machine. The following image shows how the `image-uploader` appears within the headless CMS interface:
-
-![image-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-four___58dba186180d5e731436a06c41a8c454.png)
-
-> ⚠️ The `image-uploader` is one of the widgets available. Still, we recommend using the [`media gallery`](#media-gallery) widget, which allows selecting and uploading not only images but also videos from the [Media](https://help.vtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module.
-
-<CH.Code>
-
-```json image-uploader
-"imageSrc": {
-   "type": "string",
-    "title": "Image",
-    "widget": {
-        "ui:widget": "image-uploader"
-     }
- }
-```
-
-</CH.Code>
-
----
-
-### `date-time`
-
-Provides a calendar popup for selecting a single date and time. It is ideal for displaying deadlines, event times, or any scenario where you need to specify a specific date and time within your headless CMS content. For example, showcase a product's expiration date or display a time-limited coupon badge. The following image shows how the `date-time` appears within the headless CMS interface:
-
-![date-time-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-five___ddd15e6fbc00b8687276bd6bf6d72e78.gif)
-
-<CH.Code>
-
-```json date-time
-"dateAndTime": {
-    "title": "Calendar",
-    "type": "string",
-    "widget": {
-       "ui:widget": "date-time"
-     }
- },
-```
-
-</CH.Code>
-
----
-
-### `draftjs-rich-text`
-
-Displays an editor that allows formatting and styling of store text. The following image shows how the `draftjs-rich-text` appears within the headless CMS interface:
-
-![draftjs-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-six___b1c1f6a8a646661428c75d7e68dcdbd2.png)
-
-<CH.Code>
-
-```json draftjs-rich-text
-"richText": {
-    "title": "Text editor",
-    "type": "string",
-    "widget": {
-       "ui:widget": "draftjs-rich-text"
-     }
- },
-```
-
-</CH.Code>
-
----
-
-### `media-gallery`
-
-Property a card to upload or select an existing image from the [Media](https://help.vtex.com/en/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module. The following image shows how the `media-gallery` appears within the headless CMS interface:
-
-> ⚠️ The difference between the [`image-uploader`](#image-uploader) and the `media-gallery` is that when you click the `media-gallery` property, you can select or upload an image or a video from the [Media](https://help.vtex.com/tutorial/media-overview--31fhjHTt4TBoo50AmGQ9b2) module. The `image-uploader` allows you to upload only images from your machine.
-
-![media-gallery-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-seven___ab9decd87c30ee0c44428ff83dcae592.png)
-
-<CH.Code>
-
-```json media-gallery
-"mediaGallery": {
-    "title": "Media Gallery",
-    "type": "string",
-    "widget": {
-       "ui:widget": "media-gallery"
-     }
- },
-```
-
-</CH.Code>
-
-</CH.Scrollycoding>
