--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -4,14 +4,14 @@ title: 'Widgets for Headless CMS'
 
 Widgets are interface elements in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) that merchants can use to enhance store sections. These can include date pickers, dropdown menus, image uploaders, and more, helping editors create and edit content.
 
-In this guide, you will see:
+In this guide, you will find:
 
-- [Available widgets](#available-widgets): Default widgets to implement in store sections.
-- [Example on how to add a widget to a section](#adding-a-widget-to-a-store-section): An implementation example on how to add a widget to a new store section.
+- [Widgets available](#widgets-available): An overview of each widget and its function.
+- [Instructions on how to add a widget to a section](#adding-a-widget-to-a-store-section): A step-by-step example on incorporating a widget into a new store section.
 
-## Available widgets
+## Widgets available
 
-Below is a brief description of the widgets that can be implemented and used in the Headless CMS interface in the VTEX Admin. For detailed information about each widget, click on the respective widget name and for an implementation example of adding a widget to a store section, see the [Adding a widget to a store section](#adding-a-widget-to-a-store-section).
+Below is a brief description of the widgets that can be implemented and used in the Headless CMS interface in the VTEX Admin. For detailed information about each widget, click on the respective widget name.
 
 | Widget name    | Description     |
 | -------------------- | ------------------ |
