--- a/docs/faststore/docs/faststore-api/schema/mutations.mdx
+++ b/docs/faststore/docs/faststore-api/schema/mutations.mdx
@@ -16,7 +16,7 @@ title: "Mutations"
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>validateCart</strong></td>
-<td valign="top"><a href="#storecart">StoreCart</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storecart">StoreCart</a></td>
 <td>
 
 Checks for changes between the cart presented in the UI and the cart stored in the ecommerce platform. If changes are detected, it returns the cart stored on the platform. Otherwise, it returns `null`.
@@ -25,7 +25,7 @@ Checks for changes between the cart presented in the UI and the cart stored in t
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">cart</td>
-<td valign="top"><a href="#istorecart">IStoreCart</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istorecart">IStoreCart</a>!</td>
 <td>
 
 Shopping cart input.
@@ -34,7 +34,7 @@ Shopping cart input.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">session</td>
-<td valign="top"><a href="#istoresession">IStoreSession</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoresession">IStoreSession</a></td>
 <td>
 
 Web session identifier.
@@ -49,9 +49,16 @@ Web session identifier.
 <table>
 <thead>
 <tr>
+<th align="left">Field</th>
+<th align="right">Argument</th>
+<th align="left">Type</th>
+<th align="left">Description</th>
+</tr>
+</thead>
+<tr>
 <tr>
 <td colspan="2" valign="top"><strong>validateSession</strong></td>
-<td valign="top"><a href="#storesession">StoreSession</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storesession">StoreSession</a></td>
 <td>
 
 Updates a web session with the specified values.
@@ -60,7 +67,7 @@ Updates a web session with the specified values.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">session</td>
-<td valign="top"><a href="#istoresession">IStoreSession</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoresession">IStoreSession</a>!</td>
 <td>
 
 Web session identifier.
@@ -69,12 +76,12 @@ Web session identifier.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">search</td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td></td>
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>subscribeToNewsletter</strong></td>
-<td valign="top"><a href="#personnewsletter">PersonNewsletter</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#personnewsletter">PersonNewsletter</a></td>
 <td>
 
 Subscribes a new person to the newsletter list.
@@ -83,8 +90,8 @@ Subscribes a new person to the newsletter list.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">data</td>
-<td valign="top"><a href="#ipersonnewsletter">IPersonNewsletter</a>!</td>
-<td></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#ipersonnewsletter">IPersonNewsletter</a>!</td>
+<td>Person data input to the newsletter.</td>
 </tr>
 </tbody>
 </table>
