objects.mdx: fix typos

--- a/docs/faststore/docs/faststore-api/schema/objects.mdx
+++ b/docs/faststore/docs/faststore-api/schema/objects.mdx
@@ -23,7 +23,7 @@ Address information.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address postal code
+Address postal code.
 
 </td>
 </tr>
@@ -32,7 +32,7 @@ Address postal code
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address city
+Address city.
 
 </td>
 </tr>
@@ -41,7 +41,7 @@ Address city
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address state
+Address state.
 
 </td>
 </tr>
@@ -50,7 +50,7 @@ Address state
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address country
+Address country.
 
 </td>
 </tr>
@@ -59,7 +59,7 @@ Address country
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address street
+Address street.
 
 </td>
 </tr>
@@ -68,7 +68,7 @@ Address street
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address number
+Address number.
 
 </td>
 </tr>
@@ -77,7 +77,7 @@ Address number
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address neighborhood
+Address neighborhood.
 
 </td>
 </tr>
@@ -86,7 +86,7 @@ Address neighborhood
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address complement
+Address complement.
 
 </td>
 </tr>
@@ -95,7 +95,7 @@ Address complement
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Address reference
+Address reference.
 
 </td>
 </tr>
@@ -104,7 +104,7 @@ Address reference
 <td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>]</td>
 <td>
 
-Address geoCoordinates
+Address geoCoordinates.
 
 </td>
 </tr>
@@ -128,7 +128,7 @@ Address geoCoordinates
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Available delivery window start date in UTC
+Available delivery window start date in UTC.
 
 </td>
 </tr>
@@ -137,7 +137,7 @@ Available delivery window start date in UTC
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Available delivery window end date in UTC
+Available delivery window end date in UTC.
 
 </td>
 </tr>
@@ -146,7 +146,7 @@ Available delivery window end date in UTC
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a></td>
 <td>
 
-Available delivery window price
+Available delivery window price.
 
 </td>
 </tr>
@@ -155,7 +155,7 @@ Available delivery window price
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a></td>
 <td>
 
-Available delivery window list price
+Available delivery window list price.
 
 </td>
 </tr>
@@ -164,7 +164,7 @@ Available delivery window list price
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a></td>
 <td>
 
-Available delivery window tax
+Available delivery window tax.
 
 </td>
 </tr>
@@ -188,7 +188,7 @@ Available delivery window tax
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-DeliveryIds courier id
+DeliveryIds courier id.
 
 </td>
 </tr>
@@ -197,7 +197,7 @@ DeliveryIds courier id
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-DeliveryIds warehouse id
+DeliveryIds warehouse id.
 
 </td>
 </tr>
@@ -206,7 +206,7 @@ DeliveryIds warehouse id
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-DeliveryIds dock id
+DeliveryIds dock id.
 
 </td>
 </tr>
@@ -215,7 +215,7 @@ DeliveryIds dock id
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-DeliveryIds courier name
+DeliveryIds courier name.
 
 </td>
 </tr>
@@ -224,7 +224,7 @@ DeliveryIds courier name
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a></td>
 <td>
 
-DeliveryIds quantity
+DeliveryIds quantity.
 
 </td>
 </tr>
@@ -292,7 +292,7 @@ Shipping Simulation Logistic Item.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-LogisticsItem ID / Sku.
+LogisticsItem ID or SKU.
 
 </td>
 </tr>
@@ -786,7 +786,7 @@ Information of sellers.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Identification of the seller
+Identification of the seller.
 
 </td>
 </tr>
@@ -795,7 +795,7 @@ Identification of the seller
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Name of the seller
+Name of the seller.
 
 </td>
 </tr>
@@ -804,7 +804,7 @@ Name of the seller
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-Logo of the seller
+Logo of the seller.
 
 </td>
 </tr>
@@ -1464,7 +1464,7 @@ Collection pagination information.
 <td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storecollectionedge">StoreCollectionEdge</a>!]!</td>
 <td>
 
-Array with collection connection page edges, each containing a collection and a corresponding cursor..
+Array with collection connection page edges, each containing a collection and a corresponding cursor.
 
 </td>
 </tr>
@@ -1586,7 +1586,7 @@ Currency information.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
-Currency code (e.g: USD).
+Currency code (e.g: `USD`).
 
 </td>
 </tr>
@@ -1595,7 +1595,7 @@ Currency code (e.g: USD).
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
-Currency symbol (e.g: $).
+Currency symbol (e.g: `$`).
 
 </td>
 </tr>
@@ -2427,7 +2427,7 @@ Array of additional properties.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
-The product's release date. Formatted using https://en.wikipedia.org/wiki/ISO_8601
+The product's release date. Formatted using <a href="https://www.iso.org/iso-8601-date-and-time-format.html"> ISO 8601<a>. 
 
 </td>
 </tr>
@@ -2614,7 +2614,7 @@ Property name.
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
-Specifies the nature of the value
+Specifies the nature of the value.
 
 </td>
 </tr>
@@ -2641,7 +2641,7 @@ https://schema.org/Thing
 <td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
-URL to redirect
+URL to redirect.
 
 </td>
 </tr>
