--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
@@ -6,7 +6,7 @@ createdAt: "2024-07-31T18:01:27.599Z"
 updatedAt: ""
 excerpt: "Explore practical schema examples for configuring custom components in Site Editor."
 seeAlso: 
-  - “/docs/guides/vtex-io-documentation-making-a-custom-component-available-in-site-editor”
+  - "/docs/guides/vtex-io-documentation-making-a-custom-component-available-in-site-editor"
 ---
 
 When configuring a custom component, you need to define a schema within it to make it editable by user administrators directly in Site Editor. Learn how to configure the schema definitions in the [Making a custom component available in Site Editor](https://developers.vtex.com/docs/guides/vtex-io-documentation-making-a-custom-component-editable-in-the-site-editor) guide.
