--- a/docs/faststore/components/molecules/input-field.mdx
+++ b/docs/faststore/components/molecules/input-field.mdx
@@ -128,11 +128,17 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 <TokenTable>
   <TokenRow token="--fs-input-label-padding" value="0 var(--fs-spacing-2)" />
   <TokenRow
-    token="--fs-input-label-color"
+    token="--fs-input-field-label-color"
     value="var(--fs-color-text-light)"
     isColor
   />
-  <TokenRow token="--fs-input-label-size" value="var(--fs-text-size-tiny)" />
+  <TokenRow token="--fs-input-field-label-size" value="var(--fs-text-size-tiny)" />
+</TokenTable>
+
+#### Button
+
+<TokenTable>
+  <TokenRow token="--fs-input-field-button-height" value="var(--fs-control-tap-size)" />
 </TokenTable>
 
 ### Variants
