--- a/docs/faststore/components/molecules/order-summary.mdx
+++ b/docs/faststore/components/molecules/order-summary.mdx
@@ -76,6 +76,10 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
     token="--fs-order-summary-margin-bottom"
     value="var(--fs-spacing-2)"
   />
+  <TokenRow
+    token="--fs-order-summary-row-gap"
+    value="0"
+  />
   <TokenDivider />
   <TokenRow
     token="--fs-order-summary-discount-text-color"
