Product Card: Removed gray background for out-of-stock products due to new design pattern.

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -501,6 +501,11 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
     value="var(--fs-color-disabled-bkg)"
     isColor
   />
+  <TokenRow
+    token="--fs-product-card-out-of-stock-border-color"
+    value="var(--fs-color-neutral-1)"
+    isColor
+  />
   <TokenRow token="--fs-product-card-out-of-stock-img-opacity" value=".5" />
 </TokenTable>
 
