--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -149,7 +149,7 @@ Widgets can help when you have [created a new store section](https://developers.
 
   <CH.Code>
 
-  ```json sections.json focus=34:39
+  ```json sections.json mark[34:39]
     …
     {
       "name": "CustomNewsletter",
