--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -149,7 +149,8 @@ Widgets can help when you have [created a new store section](https://developers.
 
 <CH.Code>
 
-```json sections.json mark[34:39]
+```json sections.json
+# mark[34:39]
     …
     {
       "name": "CustomNewsletter",
@@ -299,18 +300,14 @@ Widgets can help when you have [created a new store section](https://developers.
 
 </CH.Code>
 
----
-
-### Synchronize the changes with Headless CMS
-
-1. Open the terminal and run `yarn cms-sync` to synchronize your changes with the Headless CMS. Once the changes are synchronized, you will see the following message: `info: CMS synced successfully...`.
-2. Go to the VTEX Admin and access **Storefront > Headless CMS**.
-3. Open the page where you want to add the new section. In this context, we will add the `Custom Newsletter` to the `Home`.
-4. Add the section to the page, and you will notice the widget you have added, the [`media-gallery`](#media-gallery).
+4. Open the terminal and run `yarn cms-sync` to synchronize the new section with the Headless CMS. Once the changes are synchronized, you will see the following message: `info: CMS synced successfully...`.
+5. Go to the VTEX Admin and access **Storefront > Headless CMS**.
+6. Open the page where you want to add the new section. In this context, we will add the `Custom Newsletter` to the `Home`.
+7. Add the section to the page, and you will notice the widget you have added, the [`media-gallery`](#media-gallery).
 
     ![newsletter-hcms-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-one___6c8c5e28b43487efc6f6048afd8d8d15.gif)
 
-5. Click `Preview` to see the new component with the new image.
+8. Click `Preview` to see the new component with the new image.
 
     ![newsletter-store-interface](https://vtexhelp.vtexassets.com/assets/docs/src/scoped-widgets-two___9c76a69ce03639b33faa85eb2a7cb367.png)
 
