--- a/docs/faststore/docs/headless-cms/widgets.mdx
+++ b/docs/faststore/docs/headless-cms/widgets.mdx
@@ -7,7 +7,7 @@ Widgets are interface elements in the [Headless CMS](https://developers.vtex.com
 In this guide, you will find:
 
 - [Widgets available](#widgets-available): An overview of each widget and its function.
-- [Instructions on how to add a widget to a section](#adding-a-widget-to-a-store-section): A step-by-step example on incorporating a widget into a new store section.
+- [Instructions on how to add a widget to a section](#adding-a-widget-to-a-store-section): A step-by-step example of incorporating a widget into a new store section.
 
 ## Widgets available
 
