Doc: Updating vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-available-in-site-editor.mdx
@@ -7,11 +7,14 @@ updatedAt: ""
 excerpt: "Learn how to allow component customization directly in Site Editor."
 seeAlso:
    - "/docs/guides/vtex-io-documentation-1-developing-storefront-apps-using-react-and-vtex-io"
+   - "/docs/guides/vtex-io-documentation-site-editor-schema-examples"
 ---
 
 To allow component customization in [Site Editor](https://developers.vtex.com/docs/guides/vtex-io-documentation-site-editor), you need to define the schema for each editable property and reference these definitions in the `interfaces.json` file.
 
 In this guide, you will learn how to configure the schema definitions in your components, allowing users to customize them directly in Site Editor.
+
+>ℹ️ Explore practical examples of using schemas to configure custom components in [Site Editor schema examples](https://developers.vtex.com/docs/guides/vtex-io-documentation-site-editor-schema-examples).
 
 ## Before you begin
 
