--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -79,7 +79,7 @@ Check the available Headless CMS schema that you can customize for this componen
 | Type                              | Availability                                                                                                                                                                   |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Overridable components            | [`Empty State`](https://developers.vtex.com/docs/guides/faststore/organisms-empty-state) |
-| Headless CMS: props customization | <ul className="doc-list"><li> `Variant`</li><li> `bkgColor`</li></ul>                                                                                                      |
+| Headless CMS: props customization | <ul className="doc-list"><li> `title`</li><li> `titleIcon`</li><li> `variant`</li><li> `bkgColor`</li></ul>                                                                                                      |
 
 <details>
 <summary><b>BannerText - Available schema</b></summary> 
