--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -78,8 +78,8 @@ Check the available Headless CMS schema that you can customize for this componen
 
 | Type                              | Availability                                                                                                                                                                   |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Overridable components            | [`Empty State`](https://developers.vtex.com/docs/guides/faststore/organisms-empty-state) |
-| Headless CMS: props customization | <ul className="doc-list"><li> `title`</li><li> `titleIcon`</li><li> `variant`</li><li> `bkgColor`</li></ul>                                                                                                      |
+| Overridable components            | <ul className="doc-list"><li> [`BannerText`](https://developers.vtex.com/docs/guides/faststore/organisms-banner-text)</li> <li> [`BannerTextContent`](https://developers.vtex.com/docs/guides/faststore/organisms-banner-text#banner-text-content)</li></ul> |
+| Headless CMS: props customization | <ul className="doc-list"><li> `ColorVariant`</li><li> `Variant`</li></ul>                                                                                                      |
 
 <details>
 <summary><b>BannerText - Available schema</b></summary> 
@@ -192,7 +192,7 @@ Check the available Headless CMS schema that you can customize for this componen
 | Type                              | Availability                                                                                                                     |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li>[`ProductShelf`](https://developers.vtex.com/docs/guides/faststore/organisms-product-shelf)</li><li>`__experimentalCarousel`</li><li>`__experimentalProductCard`</li></ul> |
-| Headless CMS: props customization |                                                                         |
+| Headless CMS: props customization | <ul className="doc-list"><li> `title`</li><li> `kind`</li></ul>                                                           |
 
 <details>
 <summary><b>CrossSellingShelf - Available schema</b></summary> 
@@ -259,10 +259,11 @@ Check the available Headless CMS schema that you can customize for this componen
 
 ### Empty State
 
-| Type                              | Availability                                                                                                                     |
-| --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
-| Overridable components            | <ul className="doc-list"><li>[`Breadcrumb`](https://developers.vtex.com/docs/guides/faststore/molecules-breadcrumb)</li><li>[`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li></ul> |
-| Headless CMS: props customization |                                                                     |
+| Type                              | Availability                                                                                                                                                                   |
+| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Overridable components            | [`Empty State`](https://developers.vtex.com/docs/guides/faststore/organisms-empty-state)                                                                                       |
+| Headless CMS: props customization | <ul className="doc-list"><li> `title`</li><li> `titleIcon`</li><li> `variant`</li><li> `bkgColor`</li></ul>                                                                    |
+
 
 <details>
 <summary><b>Empty State - Available schema</b></summary> 
