add disclaimer about FastStore projects

--- a/docs/faststore/components/getting-started.mdx
+++ b/docs/faststore/components/getting-started.mdx
@@ -2,8 +2,9 @@
 title: "Getting started with FastStore UI"
 ---
 
+> ⚠️ If your store project is built with [FastStore](https://developers.vtex.com/docs/guides/faststore), you don't need to follow the steps in this guide to install the FastStore UI. FastStore projects include by default FastStore UI components.
 
-FastStore UI is an ecommerce-focused library of [brandless](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure) components you can easily use on your application.
+FastStore UI is an ecommerce-focused library of [brandless](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure) components you can easily use on your store projects.
 It provides features & basic style that makes it faster to implement and customize on top of it.
 
 ## Installation
