--- a/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
+++ b/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
@@ -47,13 +47,13 @@ In the `ServerProduct.ts` file, define the GraphQL fragment corresponding to the
 
 import { gql } from '@faststore/core/api'
 
-export const fragment = gql`
+export const fragment = gql(`
   fragment ServerProduct on Query {
     product(locator: $locator) {
-      customData
+        customData
     }
   }
-`
+`)
 ```
 
 Now, you can consume `customData` by following the [Consuming FastStore API extension with custom components](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions) guide.
