--- a/docs/faststore/docs/reference/global-tokens/typography.mdx
+++ b/docs/faststore/docs/reference/global-tokens/typography.mdx
@@ -147,9 +147,7 @@ export default WebFonts;
 
 3. In your custom theme file, usually `src/themes/custom-theme.scss`, use the `--fs-text-face-body` token with the `font-family` you chose.
 
-<Callout type="info" emoji="ℹ️">
-  We recommend using [fallback fonts](https://developer.chrome.com/blog/font-fallbacks/#background) as system fonts to ensure quick rendering, consistent and readable content.
-</Callout>
+> ℹ️ We recommend using [fallback fonts](https://developer.chrome.com/blog/font-fallbacks/#background) as system fonts to ensure quick rendering, consistent and readable content.
 
 ```css
 @layer theme {
