fix 'Icon Button' link and typo

--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -45,7 +45,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Cart Item"
-    description="Used to present the summarized information of a product inside the Cart."
+    description="Used to present the summarized product information inside the Cart."
     actionPath="/docs/guides/faststore/molecules-cart-item"
   >
     <CartItemExample/>
@@ -106,7 +106,7 @@ hideTOC: true
   <CardItem
     title="Icon Button"
     description="icons that trigger some sort of action, such as adding an item to the cart."
-    actionPath="/docs/guides/faststore/molecules-discount-badge"
+    actionPath="/docs/guides/faststore/molecules-icon-button"
   >
     <IconButton icon={<Icon name="ShoppingCart" />} aria-label="Buy" />
   </CardItem>
